--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ background-repeat: no-repeat;
 <ul> 
 <li><a href="index.html">start</a></li>
 <li><a href="kontakt.html">kontakt</a></li>
+<li><a href="om.html">om</a></li>
 </ul>
 
 <div style="padding:15px;color:white;">
