--- a/om.html
+++ b/om.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="da">
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153073753-1"></script>
@@ -10,7 +10,7 @@
 
   gtag('config', 'UA-153073753-1');
 </script>
-<title>Kontakt</title>
+<title>start</title>
 <style>
 
 a:link, a:visited {
@@ -25,7 +25,7 @@ color: #000000;
 
 ul {
 list-style-type: none;
-margin: 0px;
+margin: 0;
 padding: 0;
 overflow: hidden;
 background-color: #BDBDBD;
@@ -50,26 +50,19 @@ text-decoratiom: none;
 li a:hover {
 background-color: #D8D8D8;
 
-}
-
-#box {
-padding-top: 50px;
-padding-right: 30px;
-padding-bottom: 50px;
-padding-left: 80px;
-background-color:Gray;
-color:White;
-
-
-}
-
 body {
 
 background-repeat: no-repeat;
 
+#bx {
+padding-top: 50px;
+padding-right: 30px;
+padding-bottom: 50px;
+padding-left: 80px;
+background-color:Red;
+color:White;
+
 }
-
-
 
 </style>
 </head>
@@ -82,20 +75,22 @@ background-repeat: no-repeat;
 <li><a href="kontakt.html">kontakt</a></li>
 <li><a href="om.html">om</a></li>
 </ul>
-
-<div style="padding:15px;color:white;">
-<h1 style="text-align:left;"> Kontakt Mig </h1>
-<div style="background-color:#FFFFFF;color:Black;padding-left:150px;padding-top:25px;padding-bottom:25px;padding-right:150px;">
-<div id="box">
-<h4> Navn </h4>
-<p> Marius Rossing </p>
-<h4> E-mail </h4>
-<p> mariusrossing@gmail.com </p>
-<h4> Alder </h4>
-<p> 17 </P>
+<div style="padding:15px;color:White;">
+<h1 style="text-align:left;"> om </h1>
+</div>
+<div style="background-color:#FFFFFF;color:Black;padding-left:300px;padding-top:25px;">
+<div style="float-left;">
+<img src="images/info.png" alt="info logo med et i">
+</div>
+<div>
+<h1> Om denne side </h1>
+</div>
+<div>
+<h4> tradeparter </h4>
+<p>  På denne sider bliver der brugt tradeparts tjenenster. </p>
+<p>  her er en liste af de tradeparter jeg bruger. </p>
+<p> google <br> spotify <br> steamprofile.com </p>
 </div>
 </div>
-</div>
-
 </body>
 </html>
